--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ copyright_holder = perlancar <perlancar@cpan.org>
 license = Perl_5
 ;---------------------------------
 
-version=20221027.0.0
+version=20230207.0.0
 
 name=TableDataBundle-Business-ID-BPOM
 
@@ -19,7 +19,8 @@ name=TableDataBundle-Business-ID-BPOM
 perl=5.010001
 strict=0
 warnings=0
-App::BPOMUtils::Table=0
+App::BPOMUtils::Table::FoodCategory=0
+App::BPOMUtils::Table::FoodType=0
 Role::Tiny=0
 Role::Tiny::With=0
 TableDataRole::Source::AOA=0
